A62 QP 2GB: added calibrations

--- a/board/seco/ddr/mx6_SBC_A62_ram.cfg
+++ b/board/seco/ddr/mx6_SBC_A62_ram.cfg
@@ -58,6 +58,11 @@ BOOT_FROM      sd
 
                 #include "quad/ddr_bit_64_qd.cfg"
                 #include "cfg_A62/a62QP_4x256M.cfg"
+
+	 #elif defined ( CONFIG_SECOMX6_2GB_4x512 )
+
+                #include "quad/ddr_bit_64_qd.cfg"
+                #include "cfg_A62/a62QP_4x512M.cfg"
 	#endif
 	
 
